Fix lingering hover on nav buttons on mobile

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -49,8 +49,10 @@
       }
 
       &:hover {
-        border-color: rgb(0, 170, 255);
-        background-color: lighten(theme.$purple, 20);
+        @media (hover: hover) {
+          border-color: rgb(0, 170, 255);
+          background-color: lighten(theme.$purple, 20);
+        }
       }
     }
   }
